# micromachines

./: .gitignore  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  Car.cpp  Car.h  Error.cpp  Makefile  README.md  Record.cpp  Record.h  Window.cpp  Window.h  cmake_install.cmake  config.json  main.cpp  map  tracks_layout.json
client/: main.cpp
client/include/: Block.h  BlockingQueue.h  Camera.h  Car.h  Dispatcher.h  Drawer.h  EventLoopIA.h  EventLoopSDL.h  MatchWindow.h  Model.h  ModelMonitor.h  ModelUpdater.h  Modifier.h  PicType.h  PictureLoader.h  SoundTh.h  ThreadSafeQueue.h  ThreadsManager.h  server.h
client/include/lua/: ai.h
client/include/sdl/: SdlAnimation.h  SdlException.h  SdlMusic.h  SdlSoundFX.h  SdlSurface.h  SdlTexture.h  SdlWindow.h
client/lua/: CMakeLists.txt
client/lua/src/: CMakeLists.txt  ai.c  ia.c  movements.lua
client/src/: Block.cpp  BlockingQueue.cpp  Camera.cpp  Car.cpp  Dispatcher.cpp  Drawer.cpp  EventLoopIA.cpp  EventLoopSDL.cpp  MatchWindow.cpp  Model.cpp  ModelMonitor.cpp  ModelUpdater.cpp  Modifier.cpp  PictureLoader.cpp  SoundTh.cpp  ThreadSafeQueue.cpp  ThreadsManager.cpp  server.cpp
client/src/lua/: ai.c  ai.cpp  ai.lua  movements.lua
client/src/sdl/: SdlAnimation.cpp  SdlException.cpp  SdlMusic.cpp  SdlSoundFX.cpp  SdlSurface.cpp  SdlTexture.cpp  SdlWindow.cpp
common/include/: Button.h  Config.h  Error.h  Grandstand.h  ModType.h  Modifier.h  ModifierList.h  Prompt.h  TextTexture.h  Track.h  TrackList.h  TrackPartData.h  directory_parser.h  gameState.h  lock.h  socket.h  socket_error.h  thread.h
common/src/: Button.cpp  Config.cpp  Grandstand.cpp  Modifier.cpp  ModifierList.cpp  Prompt.cpp  TextTexture.cpp  Track.cpp  TrackList.cpp  TrackPartData.cpp  directory_parser.cpp  lock.cpp  socket.cpp  socket_error.cpp  thread.cpp
dev/jsontracks/: CMakeLists.txt  main.cpp
editor/: main.cpp
editor/include/: TrackBlock.h  TrackEditor.h  TrackGrid.h  Window.h
editor/src/: Error.cpp  TrackBlock.cpp  TrackEditor.cpp  TrackGrid.cpp  Window.cpp
map-editor/: Button.cpp  CMakeLists.txt  Prompt.cpp  Prompt.h  TextTexture.cpp  Track.cpp  Track.h  TrackBlock.cpp  TrackBlock.h  TrackEditor.cpp  TrackEditor.h  TrackGrid.cpp  TrackGrid.h  TrackList.cpp  TrackList.h  TrackPartData.cpp  TrackPartData.h  Window.cpp  main.cpp  mainEditor.cpp  tracks_layout.json
record/include/: Record.h
record/src/: Record.cpp
server/: main.cpp
server/include/: acceptor_th.h  blocking_queue.h  client_th.h  game_loop_th.h  games_th.h  loader.h  micromachines.h  mm_server.h  player_action.h
server/include/libs/: testLib.h  testVir.h
server/include/model/: car.h  interpreter.h  micromachines.h  micromachines_th.h  model.h  point.h  track.h
server/include/model/box2d-entities/: destruction_listener.h  fixture_user_data.h  tdcar.h  tdgrandstand.h  tdtire.h
server/include/model/cars/: black_car.h  blue_car.h  car.h  color.h  colors.h  red_car.h  white_car.h  yellow_car.h
server/include/model/cars/states/: accelerate.h  accelerate_left.h  accelerate_right.h  break.h  break_left.h  break_right.h  car_state.h  left.h  nothing.h  right.h
server/include/model/tracks/: track.h  track_part_data.h  track_parts.h
server/loader/: loader.cpp  loader.h  main.c  testLib.cpp  testLib2.cpp  testLib2.h  testVir.h
server/loader/libs/: main.cpp  some.c  testLib.h
server/src/: acceptor_th.cpp  blocking_queue.cpp  client_th.cpp  game_loop_th.cpp  games_th.cpp  loader.cpp  micromachines.cpp  mm_server.cpp  player_action.cpp
server/src/libs/: testLib.cpp
server/src/model/: car.cpp  interpreter.cpp  interpreter.h  micromachines.cpp  micromachines_th.cpp  point.cpp  track.cpp
server/src/model/box2d-entities/: tdcar.cpp  tdgrandstand.cpp  tdtire.cpp
server/src/model/cars/: black_car.cpp  blue_car.cpp  car.cpp  color.cpp  red_car.cpp  white_car.cpp  yellow_car.cpp
server/src/model/cars/states/: accelerate.cpp  accelerate_left.cpp  accelerate_right.cpp  break.cpp  break_left.cpp  break_right.cpp  left.cpp  nothing.cpp  right.cpp
server/src/model/tracks/: track.cpp
